made jupyternotebook more flexible: logic will be useful for forecast endpoint

--- a/forecast_logic.ipynb
+++ b/forecast_logic.ipynb
@@ -5,210 +5,13 @@
    "id": "0b7a0dbb",
    "metadata": {},
    "source": [
-    "## Forecast Logic\n",
-    "\n",
-    "There aren't enough data points and variables for any complex AI predictive models. The best way to define our forecast logic is by using a linear regression. It's advantages are:\n",
-    "\n",
-    "- **interpretability**: results for a linear regression are easy to communicate to client improving their trust and thus model aceptance\n",
-    "\n",
-    "- **$R \\approx 1$**: there is a near perfect positive linear correlation "
+    "## Data Linear Fit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "id": "f0826510",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utility import preprocess"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "ac7d7f52",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>2024-06-24 00:00:00</th>\n",
-       "      <th>2024-07-24 00:00:00</th>\n",
-       "      <th>2024-08-24 00:00:00</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Quality group</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CHQ</th>\n",
-       "      <td>2386</td>\n",
-       "      <td>1032</td>\n",
-       "      <td>2541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MBQ</th>\n",
-       "      <td>1780</td>\n",
-       "      <td>6605</td>\n",
-       "      <td>6190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rebar</th>\n",
-       "      <td>23715</td>\n",
-       "      <td>21817</td>\n",
-       "      <td>24567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SBQ</th>\n",
-       "      <td>813</td>\n",
-       "      <td>601</td>\n",
-       "      <td>603</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               2024-06-24 00:00:00  2024-07-24 00:00:00  2024-08-24 00:00:00\n",
-       "Quality group                                                               \n",
-       "CHQ                           2386                 1032                 2541\n",
-       "MBQ                           1780                 6605                 6190\n",
-       "Rebar                        23715                21817                24567\n",
-       "SBQ                            813                  601                  603"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "steel_prod = preprocess.process_steel_grade(\"data/steel_grade_production.xlsx\")\n",
-    "steel_prod.groupby(\"Quality group\").sum(numeric_only=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "58ece224",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Quality:</th>\n",
-       "      <th>2024-06-24 00:00:00</th>\n",
-       "      <th>2024-07-24 00:00:00</th>\n",
-       "      <th>2024-08-24 00:00:00</th>\n",
-       "      <th>2024-09-24 00:00:00</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Rebar</td>\n",
-       "      <td>238</td>\n",
-       "      <td>219</td>\n",
-       "      <td>246</td>\n",
-       "      <td>232</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MBQ</td>\n",
-       "      <td>18</td>\n",
-       "      <td>67</td>\n",
-       "      <td>62</td>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SBQ</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CHQ</td>\n",
-       "      <td>24</td>\n",
-       "      <td>11</td>\n",
-       "      <td>26</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Quality:  2024-06-24 00:00:00  2024-07-24 00:00:00  2024-08-24 00:00:00  \\\n",
-       "0    Rebar                  238                  219                  246   \n",
-       "1      MBQ                   18                   67                   62   \n",
-       "2      SBQ                    8                    6                    6   \n",
-       "3      CHQ                   24                   11                   26   \n",
-       "\n",
-       "   2024-09-24 00:00:00  \n",
-       "0                  232  \n",
-       "1                   54  \n",
-       "2                   10  \n",
-       "3                   22  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "forecast = preprocess.sheet_to_pandas(\"data/product_groups_monthly.xlsx\")\n",
-    "forecast"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "060516c3",
    "metadata": {},
    "outputs": [
     {
@@ -253,11 +56,17 @@
     }
    ],
    "source": [
+    "from utility import preprocess\n",
+    "steel_prod = preprocess.process_steel_grade(\"data/steel_grade_production.xlsx\")\n",
+    "steel_prod = steel_prod.groupby(\"Quality group\").sum(numeric_only=True)\n",
+    "forecast = preprocess.sheet_to_pandas(\"data/product_groups_monthly.xlsx\")\n",
+    "\n",
     "data = {\n",
-    "    \"Rebar\": ([238, 219, 246], [23715, 21817, 24567], \"blue\"),\n",
-    "    \"MBQ\": ([18, 67, 62], [1780, 6605, 6190], \"green\"),\n",
-    "    \"SBQ\": ([8, 6, 6], [813, 601, 603], \"orange\"),\n",
-    "    \"CHQ\": ([24, 11, 26], [2386, 1032, 2541], \"red\")}\n",
+    "    \"Rebar\": (forecast[forecast[\"Quality:\"] == \"Rebar\"].iloc[0, 1:-1].tolist(), steel_prod.loc[\"Rebar\"].tolist(), \"blue\"),\n",
+    "    \"MBQ\": (forecast[forecast[\"Quality:\"] == \"MBQ\"].iloc[0, 1:-1].tolist(), steel_prod.loc[\"MBQ\"].tolist(), \"green\"),\n",
+    "    \"SBQ\": (forecast[forecast[\"Quality:\"] == \"SBQ\"].iloc[0, 1:-1].tolist(), steel_prod.loc[\"SBQ\"].tolist(), \"orange\"),\n",
+    "    \"CHQ\": (forecast[forecast[\"Quality:\"] == \"CHQ\"].iloc[0, 1:-1].tolist(), steel_prod.loc[\"CHQ\"].tolist(), \"red\")\n",
+    "}\n",
     "\n",
     "preprocess.plot_linear_fit(data)"
    ]
