updated dockerfile and readme

--- a/forecast_logic.ipynb
+++ b/forecast_logic.ipynb
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4d4057a",
+   "id": "ef99370a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,16 @@
     "        self.file = open(filepath, \"rb\")\n",
     "\n",
     "    def close(self):\n",
-    "        self.file.close()\n",
-    "\n",
+    "        self.file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4d4057a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file_steel = DummyUploadFile(\"data/steel_grade_production.xlsx\")\n",
     "steel_grade_production = utility.preprocess.process_steel_grade(file_steel)"
    ]
@@ -101,43 +109,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e328fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import utility.linear_fit\n",
-    "import utility.preprocess\n",
-    "\n",
-    "class DummyUploadFile:\n",
-    "    def __init__(self, filepath):\n",
-    "        self.filename = filepath\n",
-    "        self.file = open(filepath, \"rb\")\n",
-    "\n",
-    "    def close(self):\n",
-    "        self.file.close()\n",
-    "\n",
-    "file_steel = DummyUploadFile(\"data/steel_grade_production.xlsx\")\n",
-    "steel_grade_production = utility.preprocess.process_steel_grade(file_steel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b9e7cd86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utility.linear_fit\n",
-    "import utility.preprocess\n",
-    "\n",
-    "class DummyUploadFile:\n",
-    "    def __init__(self, filepath):\n",
-    "        self.filename = filepath\n",
-    "        self.file = open(filepath, \"rb\")\n",
-    "\n",
-    "    def close(self):\n",
-    "        self.file.close()\n",
-    "\n",
     "file_steel = DummyUploadFile(\"data/steel_grade_production.xlsx\")\n",
     "steel_grade_production = utility.preprocess.process_steel_grade(file_steel)"
    ]
